creation des donnees generiques avec Faker, pagination with KnpLabs, Search engine building

--- a/translations/forms.fr.yaml
+++ b/translations/forms.fr.yaml
@@ -12,3 +12,5 @@ Sold: Vendue
 Description: Description
 Gaz: Gaz
 Electrique: Electrique
+Budget Max: Budget Max
+Surface Minimale: Surface Minimale
